<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.nbmp</groupId>
    <artifactId>wave-analysis-tool</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Archetype - waveform-experiments</name>
    <url>http://maven.apache.org</url>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>bitwig</id>
            <name>Bitwig Maven Repository</name>
            <url>https://maven.bitwig.com</url>
        </repository>
    </repositories>
    <properties>
        <java.version>21</java.version>
        <javafx-sdk.path>${env.PATH_TO_FX_MODS}</javafx-sdk.path>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <spotless.version>2.42.0</spotless.version>
        <git-code-format-maven-plugin.version>5.3</git-code-format-maven-plugin.version>
        <junit-jupiter.version>5.10.3</junit-jupiter.version>
        <mockito.version>5.11.0</mockito.version>
        <java.library.path>${env.PATH_TO_FX_MODS}</java.library.path>
        <javafx.version>22.0.2</javafx.version>
        <javafx.modules>javafx.controls,javafx.fxml,javafx-base,javafx-graphics</javafx.modules>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>6.1.13</version>
        </dependency>

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.16</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>com.github.psambit9791</groupId>
            <artifactId>jdsp</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>17.0.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Test dependencies -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <!-- Specify the fully qualified name of your main class -->
                    <mainClass>com.nbmp.waveform.application.AppRun</mainClass>
                    <arguments>
                        <!-- Add the module-path and JavaFX modules -->
                        <argument>--module-path</argument>
                        <argument>${javafx-sdk.path}/lib</argument>
                        <argument>--add-modules</argument>
                        <argument>${javafx.modules}</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.nbmp.waveform.application.AppRun</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/LICENSE</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <artifact>com.github.psambit9791:jdsp</artifact>
                                    <excludes>
                                        <exclude>*.wav</exclude>
                                    </excludes>
                                </filter>
                                <filter>
                                    <excludeDefaults>false</excludeDefaults>
                                    <includes>
                                        <include>${env.JFX_PATH}/lib/*.dll</include>
                                        <include>${env.JFX_PATH}/lib/*.jar</include>
                                    </includes>
                                </filter>
                            </filters>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.junit.jupiter</exclude>
                                    <exclude>org.mockito</exclude>
                                </excludes>
                            </artifactSet>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.nbmp.waveform.application.Launcher</mainClass>
                                    <manifestEntries>
                                        <author-github-handle>https://github.com/cometbroom</author-github-handle>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <!-- These are the defaults, you can override if you want -->
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                        <googleJavaFormat>
                            <version>1.17.0
                            </version>                      <!-- optional, 1.8 is the minimum supported version for Java 11 -->
                            <style>GOOGLE</style>                       <!-- or AOSP (optional) -->
                            <reflowLongStrings>true</reflowLongStrings> <!-- optional -->
                            <formatJavadoc>false</formatJavadoc>        <!-- optional -->
                            <!-- optional: custom group artifact (you probably don't need this) -->
                            <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
                        </googleJavaFormat>

                        <importOrder/> <!-- standard import order -->
                        <importOrder>  <!-- or a custom ordering -->
                            <wildcardsLast>false
                            </wildcardsLast> <!-- Optional, default false. Sort wildcard import after specific imports -->
                            <order>java|javax,org,com,com.diffplug,,\#com.diffplug,\#
                            </order>  <!-- or use <file>${project.basedir}/eclipse.importorder</file> -->
                            <!-- you can use an empty string for all the imports you didn't specify explicitly, '|' to join group without blank line, and '\#` prefix for static imports. -->
                            <semanticSort>false
                            </semanticSort> <!-- Optional, default false. Sort by package, then class, then member (for static imports). Splitting is based on common conventions (packages are lower case, classes start with upper case). Use <treatAsPackage> and <treatAsClass> for exceptions. -->
                            <treatAsPackage> <!-- Packages starting with upper case letters. -->
                                <package>com.example.MyPackage</package>
                            </treatAsPackage>
                            <treatAsClass> <!-- Classes starting with lower case letters. -->
                                <class>com.example.myClass</class>
                            </treatAsClass>
                        </importOrder>
                        <removeUnusedImports>
                            <engine>google-java-format
                            </engine>    <!-- optional. Defaults to `google-java-format`. Can be switched to `cleanthat-javaparser-unnecessaryimport` (e.g. to process JDK17 source files with a JDK8+ Runtime) -->
                        </removeUnusedImports> <!-- fixes formatting of type annotations, see below -->
                        <licenseHeader>
                            <content>/* (C)$YEAR */
                            </content>  <!-- or <file>${project.basedir}/license-header</file> -->
                        </licenseHeader>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
